<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark_gray">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/paperDialogMaxPointTextView"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@color/medium_gray"
            android:gravity="center"
            android:text="@string/points_total"
            android:textColor="@color/text_light_gray" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/maxPointTextDialogAddPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/taskbar_black"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/text_light_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pointsTextPanel"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@color/medium_gray"
            android:gravity="center"
            android:text="@string/points_reached"
            android:textColor="@color/text_light_gray" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/reachedPointTextDialogAddPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/taskbar_black"
            android:ems="10"
            android:inputType="number"
            android:shadowColor="#B63E3E"
            android:textColor="@color/text_light_gray" />
    </LinearLayout>

    <Button
        android:id="@+id/cancelButtonDialogAddPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/button_blue"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/applyButtonDialogAddPaper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/applyButtonDialogAddPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/button_blue"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
</androidx.constraintlayout.widget.ConstraintLayout>